--- a/meta.tex
+++ b/meta.tex
@@ -29,8 +29,7 @@
 \thesisIsKind{Master}                           % Change to Bachelor if suitable
 \theYear{2016}
 \thesisCred{15}                                 % Change to 15 if Bachelor
-\thesisAdvisor{Mats Wiklund}
-\thesisAssistantAdvisor{Peter Mozelius}                       % Name of Assistant Advisor,
+\thesisAdvisor{Peter Mozelius}
                                                 % if you have one
 \thesisExternalAdvisor{}                        % Name of External Advisor,
                                                 % if you have one
@@ -45,4 +44,4 @@
 
 \abstracttext{Emotional intelligence, the ability to socially adapt to the affects of oneself and others is a fundamental social skill. Researchers have defined the term in different ways and it is at present somewhat controversial. Likewise, researchers have created many emotional intelligence tests, all tightly coupled to their respective definitions. This thesis-work applied design-science to create a new software-based test, combining two earlier approaches, SPEC and METT. The research question of this thesis was whether combining approaches might improve test performance. The software was evaluated using an experiment where 81 university students took the test once and 31 took it twice. Analyzing the results, a high degree of reliability for SPEC, low correlations between SPEC and METT, and a low test-retest reliability for SPEC, were found. Based on this, this thesis concludes: METT is highly reliable; SPEC measures a different quality than does METT, but is an unreliable instrument. Combining tests proved successful, however performance of SPEC was poor. A possible aim for future research is finding a more reliable alternative to SPEC.}
 
-\keywords{emotional intelligence, emotion, psychometrics, software}
+\keywords{emotional intelligence, emotion, psychometrics, METT, SPEC}
